<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreatePollActivity">

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/create_poll"
      android:id="@+id/create_poll"
      android:textColor="@color/black"
      android:textSize="35dp"
      android:textStyle="bold"
      android:layout_margin="20dp"
      android:gravity="center"/>

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@id/create_poll"
      android:textColor="@color/black"
      android:text="@string/poll_title"
      android:id="@+id/label1"
      android:textSize="18dp"
      android:layout_marginStart="20dp"
      android:layout_marginTop="15dp"
      android:layout_marginEnd="20dp"
      android:layout_marginBottom="10dp"
      android:gravity="left"/>

  <EditText
      android:id="@+id/title"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@id/label1"
      android:layout_marginStart="20dp"
      android:layout_marginTop="0dp"
      android:layout_marginEnd="20dp"
      android:layout_marginBottom="10dp"
      android:background="@drawable/edit_text_background"
      android:drawablePadding="20dp"
      android:hint="Enter the title of the poll"
      android:padding="10dp" />

<!--option 1-->
  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@id/title"
      android:textColor="@color/black"
      android:text="@string/option_1"
      android:id="@+id/label2"
      android:textSize="18dp"
      android:layout_marginStart="20dp"
      android:layout_marginTop="10dp"
      android:layout_marginEnd="20dp"
      android:layout_marginBottom="10dp"
      android:gravity="left"/>
  <EditText
      android:id="@+id/option1"
      android:background="@drawable/edit_text_background"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@id/label2"
      android:layout_marginStart="20dp"
      android:layout_marginTop="0dp"
      android:layout_marginEnd="20dp"
      android:layout_marginBottom="10dp"
      android:drawablePadding="20dp"
      android:hint="Enter the first option"
      android:padding="10dp" />

  <!--option 2-->
  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@id/option1"
      android:textColor="@color/black"
      android:text="@string/option_2"
      android:id="@+id/label3"
      android:textSize="18dp"
      android:layout_marginStart="20dp"
      android:layout_marginTop="10dp"
      android:layout_marginEnd="20dp"
      android:layout_marginBottom="10dp"
      android:gravity="left"/>
  <EditText
      android:id="@+id/option2"
      android:background="@drawable/edit_text_background"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@id/label3"
      android:layout_marginStart="20dp"
      android:layout_marginTop="0dp"
      android:layout_marginEnd="20dp"
      android:layout_marginBottom="10dp"
      android:drawablePadding="20dp"
      android:hint="Enter the second option"
      android:padding="10dp" />


  <!--option 3-->
  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@id/option2"
      android:textColor="@color/black"
      android:text="@string/option_3"
      android:id="@+id/label4"
      android:textSize="18dp"
      android:layout_marginStart="20dp"
      android:layout_marginTop="10dp"
      android:layout_marginEnd="20dp"
      android:layout_marginBottom="10dp"
      android:gravity="left"/>
  <EditText
      android:id="@+id/option3"
      android:background="@drawable/edit_text_background"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@id/label4"
      android:layout_marginStart="20dp"
      android:layout_marginTop="0dp"
      android:layout_marginEnd="20dp"
      android:layout_marginBottom="10dp"
      android:drawablePadding="20dp"
      android:hint="Enter the third option"
      android:padding="10dp" />

  <!--Date-->
  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@id/option3"
      android:textColor="@color/black"
      android:text="@string/vote_end_date"
      android:id="@+id/label5"
      android:textSize="18dp"
      android:layout_marginStart="20dp"
      android:layout_marginTop="10dp"
      android:layout_marginEnd="20dp"
      android:layout_marginBottom="0dp"
      android:gravity="left"/>

  <Button
      android:id="@+id/date_picker"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@id/label5"
      android:layout_centerHorizontal="true"
      android:layout_marginStart="20dp"
      android:layout_marginTop="0dp"
      android:layout_marginEnd="20dp"
      android:layout_marginBottom="10dp"
      android:backgroundTint="#D5D1D1"
      android:bottomLeftRadius="12dp"
      android:bottomRightRadius="12dp"
      android:hint="@string/email"
      android:padding="10dp"
      android:text="@string/select_date"
      android:textColor="@color/black"
      android:topLeftRadius="12dp"
      android:topRightRadius="12dp" />

  <!--Time-->
  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@id/date_picker"
      android:textColor="@color/black"
      android:text="@string/vote_end_time"
      android:id="@+id/label6"
      android:textSize="18dp"
      android:layout_marginStart="20dp"
      android:layout_marginTop="10dp"
      android:layout_marginEnd="20dp"
      android:layout_marginBottom="0dp"
      android:gravity="left"/>

  <Button
      android:id="@+id/time_picker"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@id/label6"
      android:layout_centerHorizontal="true"
      android:layout_marginStart="20dp"
      android:layout_marginTop="0dp"
      android:layout_marginEnd="20dp"
      android:layout_marginBottom="10dp"
      android:backgroundTint="#D5D1D1"
      android:bottomLeftRadius="12dp"
      android:bottomRightRadius="12dp"
      android:hint="@string/email"
      android:padding="10dp"
      android:text="@string/select_time"
      android:textColor="@color/black"
      android:topLeftRadius="12dp"
      android:topRightRadius="12dp" />

  <Button
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/submit"
      android:layout_below="@id/time_picker"
      android:text="@string/submit"
      android:layout_centerHorizontal="true"
      android:layout_margin="10dp"
      />

  </RelativeLayout>