<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateElectionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_marginTop="140dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/vice_president"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="2dp"
            android:adjustViewBounds="true"
            android:background="@drawable/vicepresident"
            android:gravity="left"
            android:scaleType="fitXY" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText

                android:id="@+id/candidate3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edit_text_background"
                android:drawablePadding="20dp"
                android:hint="Vice President Candidate 1"
                android:padding="10dp" />

            <EditText

                android:id="@+id/candidate4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edit_text_background"
                android:drawablePadding="20dp"
                android:hint="Vice President Candidate 2"
                android:padding="10dp" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_election"
        android:id="@+id/create_poll"
        android:textColor="@color/black"
        android:textSize="35dp"
        android:textStyle="bold"
        android:layout_margin="20dp"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/create_poll"
        android:textColor="@color/black"
        android:text="@string/election_title"
        android:id="@+id/label1"
        android:textSize="18dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:gravity="left"/>

    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/label1"
        android:layout_marginStart="20dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edit_text_background"
        android:drawablePadding="20dp"
        android:hint="Enter the title of the petition"
        android:padding="10dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_marginBottom="-151dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="2dp"
            android:adjustViewBounds="true"
            android:background="@drawable/president"
            android:gravity="left"
            android:scaleType="fitXY" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText

                android:id="@+id/candidate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edit_text_background"
                android:drawablePadding="20dp"
                android:hint="President Candidate 1"
                android:padding="10dp" />

            <EditText

                android:id="@+id/candidate1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edit_text_background"
                android:drawablePadding="20dp"
                android:hint="President Candidate 2"
                android:padding="10dp" />

        </LinearLayout>

    </LinearLayout>
    <!--Date-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/vote_end_date"
        android:id="@+id/label5"
        android:textSize="18dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="480dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="0dp"
        android:gravity="left"/>

    <Button
        android:id="@+id/date_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/label5"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="#D5D1D1"
        android:bottomLeftRadius="12dp"
        android:bottomRightRadius="12dp"
        android:hint="@string/email"
        android:padding="10dp"
        android:text="@string/select_date"
        android:textColor="@color/black"
        android:topLeftRadius="12dp"
        android:topRightRadius="12dp" />

    <!--Time-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/date_picker"
        android:textColor="@color/black"
        android:text="@string/vote_end_time"
        android:id="@+id/label6"
        android:textSize="18dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="0dp"
        android:gravity="left"/>

    <Button
        android:id="@+id/time_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/label6"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="#D5D1D1"
        android:bottomLeftRadius="12dp"
        android:bottomRightRadius="12dp"
        android:hint="@string/email"
        android:padding="10dp"
        android:text="@string/select_time"
        android:textColor="@color/black"
        android:topLeftRadius="12dp"
        android:topRightRadius="12dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/submit"
        android:layout_below="@id/time_picker"
        android:text="@string/submit"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        />
</RelativeLayout>